Mobile app UI Changes

--- a/src/app/components/event-details/event-details.page.html
+++ b/src/app/components/event-details/event-details.page.html
@@ -95,7 +95,7 @@
         <div class="col-md-12">
 
           <section class="Event-Menu-List-section">
-            <div class="Event-Menu-List">
+            <div class="Event-Menu-List bg_color-dark-1">
               <div class="Event-Menu-List-img">
                 <img src="../../../assets/Events/1.png" alt="thumb">
 
@@ -191,7 +191,7 @@
                                     <img
                                       src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                                   </div>
-                                  <div class="d-flex key-feature mb-2">
+                                  <div class="d-flex key-feature">
                                     <div class="icon text-center rounded-pill me-3">
                                       <img src="https://cdn-icons-png.flaticon.com/256/4050/4050257.png"
                                         class="align-middle" style="height: 32px; width: 32px;" alt="">
@@ -220,7 +220,7 @@
                                     <img
                                       src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                                   </div>
-                                  <div class="d-flex key-feature mb-2">
+                                  <div class="d-flex key-feature">
                                     <div class="icon text-center rounded-pill me-3">
                                       <img src="https://cdn3.iconfinder.com/data/icons/marine-life/100/04-512.png"
                                         class="align-middle" style="height: 32px; width: 32px;" alt="">
@@ -249,7 +249,7 @@
                                     <img
                                       src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                                   </div>
-                                  <div class="d-flex key-feature mb-2">
+                                  <div class="d-flex key-feature">
                                     <div class="icon text-center rounded-pill me-3">
                                       <img src="https://cdn-icons-png.flaticon.com/512/2002/2002611.png"
                                         class="align-middle" style="height: 32px; width: 32px;" alt="">
@@ -296,7 +296,7 @@
                                     <img
                                       src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                                   </div>
-                                  <div class="d-flex key-feature mb-2">
+                                  <div class="d-flex key-feature">
                                     <div class="icon text-center rounded-pill me-3">
                                       <img src="https://cdn-icons-png.flaticon.com/512/541/541705.png"
                                         class="align-middle" style="height: 32px; width: 32px;" alt="">
@@ -325,7 +325,7 @@
                                     <img
                                       src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                                   </div>
-                                  <div class="d-flex key-feature mb-2">
+                                  <div class="d-flex key-feature">
                                     <div class="icon text-center rounded-pill me-3">
                                       <img
                                         src="https://icons.veryicon.com/png/o/commerce-shopping/taofen-bar-category-icon-library/fresh-vegetables.png"
@@ -373,7 +373,7 @@
                                     <img
                                       src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                                   </div>
-                                  <div class="d-flex key-feature mb-2">
+                                  <div class="d-flex key-feature">
                                     <div class="icon text-center rounded-pill me-3">
                                       <img src="https://cdn-icons-png.flaticon.com/512/541/541705.png"
                                         class="align-middle" style="height: 32px; width: 32px;" alt="">
@@ -402,7 +402,7 @@
                                     <img
                                       src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                                   </div>
-                                  <div class="d-flex key-feature mb-2">
+                                  <div class="d-flex key-feature">
                                     <div class="icon text-center rounded-pill me-3">
                                       <img
                                         src="https://icons.veryicon.com/png/o/commerce-shopping/taofen-bar-category-icon-library/fresh-vegetables.png"
