--- a/src/app/components/orderconfirm/orderconfirm.page.html
+++ b/src/app/components/orderconfirm/orderconfirm.page.html
@@ -56,7 +56,7 @@
     </div>
   </header>
   <div class="website-body" >
-  <div class="payment-section bg-orange">
+  <div class="payment-section bg_color-dark-1">
 <div id="wrapper" class="payment">
   <div class="payment-card">
     <div class="payment-icon">
