--- a/src/global.scss
+++ b/src/global.scss
@@ -303,7 +303,7 @@ padding: 25px !important;
     padding:20px 35px 20px 0px !important;
   }
 .option_item .option_inner .tickmark img{
-    width: 40px !important;
+    width: 35px !important;
 }
 .option_item{
     margin: 0 !important;
@@ -331,7 +331,7 @@ padding: 25px !important;
 .Menu-List {
   display: flex;
   gap: 12px;
-  background-color: #ffffdb;
+  background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
  border-radius: 12px;
@@ -799,7 +799,7 @@ input[type="checkbox"] {
 .Event-Menu-List {
   display: flex;
   gap: 12px;
-  background-color: #fff0e3;
+  background-color: #031119;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
  border-radius: 0;
