--- a/src/app/components/checkout/checkout.page.html
+++ b/src/app/components/checkout/checkout.page.html
@@ -83,7 +83,7 @@
                 </div>
             </section>
 <div >
-			<div class="bg-orange check-out">
+			<div class="bg_color-dark-1 check-out">
 				<div class="row">
 					<div class="col-md-12">
 						
