--- a/src/app/components/cheffs/cheffs.page.html
+++ b/src/app/components/cheffs/cheffs.page.html
@@ -30,7 +30,7 @@
     </ion-toolbar>
   </ion-header> -->
   <div >
-<div class="container bg-orange">
+<div class="container bg_color-dark-1">
 				<div class="row">
 					<div class="col-md-12">
 
@@ -44,7 +44,7 @@
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+              <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -93,7 +93,7 @@
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+              <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -145,7 +145,7 @@
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+              <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -194,7 +194,7 @@
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+              <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -243,7 +243,7 @@
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+              <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -295,7 +295,7 @@
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+              <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
