--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -31,7 +31,7 @@
     </ion-toolbar>
   </ion-header> -->
   <div>
-    <div class="container bg-orange">
+    <div class="container bg_color-dark-1">
       <div class="row">
         <div class="col-md-12">
 
@@ -45,7 +45,7 @@
                   <input type="checkbox" class="checkbox">
                   <div class="option_inner facebook">
                     <div class="tickmark">
-                      <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+                      <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                     </div>
                     <div class="Menu-List">
                       <div class="Menu-List-img">
@@ -97,7 +97,7 @@
                   <input type="checkbox" class="checkbox">
                   <div class="option_inner facebook">
                     <div class="tickmark">
-                      <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+                      <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                     </div>
                     <div class="Menu-List">
                       <div class="Menu-List-img">
@@ -152,7 +152,7 @@
                   <input type="checkbox" class="checkbox">
                   <div class="option_inner facebook">
                     <div class="tickmark">
-                      <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+                      <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                     </div>
                     <div class="Menu-List">
                       <div class="Menu-List-img">
@@ -204,7 +204,7 @@
                   <input type="checkbox" class="checkbox">
                   <div class="option_inner facebook">
                     <div class="tickmark">
-                      <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+                      <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                     </div>
                     <div class="Menu-List">
                       <div class="Menu-List-img">
@@ -259,7 +259,7 @@
                   <input type="checkbox" class="checkbox">
                   <div class="option_inner facebook">
                     <div class="tickmark">
-                      <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+                      <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                     </div>
                     <div class="Menu-List">
                       <div class="Menu-List-img">
@@ -311,7 +311,7 @@
                   <input type="checkbox" class="checkbox">
                   <div class="option_inner facebook">
                     <div class="tickmark">
-                      <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+                      <img src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
                     </div>
                     <div class="Menu-List">
                       <div class="Menu-List-img">
