--- a/src/app/components/orderconfirm/orderconfirm.page.scss
+++ b/src/app/components/orderconfirm/orderconfirm.page.scss
@@ -246,8 +246,8 @@ A border-top applied to parent would curve due to border-radius.
     place-items: center;
     height: 100vh;
     background-size: 24px 24px;
-    background-image: linear-gradient(to right, #e7e9e7 1px, transparent 1px), linear-gradient(to bottom, #e7e9e7 1px, transparent 1px);
-    background-color: #eff1ef;
+    // background-image: linear-gradient(to right, #e7e9e7 1px, transparent 1px), linear-gradient(to bottom, #e7e9e7 1px, transparent 1px);
+    // background-color: #eff1ef;
     z-index: -1;
     color: #1d211c;
     -webkit-font-smoothing: antialiased;
@@ -261,8 +261,8 @@ A border-top applied to parent would curve due to border-radius.
     left: 0;
     top: 0;
     z-index: -1;
-    background-size: 96px 96px;
-    background-image: linear-gradient(to right, #dfe2df 1px, transparent 1px), linear-gradient(to bottom, #dfe2df 1px, transparent 1px);
+    // background-size: 96px 96px;
+    // background-image: linear-gradient(to right, #dfe2df 1px, transparent 1px), linear-gradient(to bottom, #dfe2df 1px, transparent 1px);
 }
 .payment{
   display: grid;
