--- a/src/app/components/customerorders/customerorders.page.html
+++ b/src/app/components/customerorders/customerorders.page.html
@@ -27,7 +27,7 @@
       </nav>
 
       <div class="header-social-links">
-        <div class="cart-icon" onclick="toggleCart()">
+        <div class="cart-icon" (click)="toggleCart()">
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
           <span class="cart-count">0</span>
         </div>
