--- a/src/app/components/login/login.page.html
+++ b/src/app/components/login/login.page.html
@@ -2,20 +2,22 @@
 
 
 <ion-content [fullscreen]="true">
-  
-   <div class="wrapper bg-orange" >
+
+  <div class="wrapper bg-orange">
     <div class="login-box">
       <div class="login-header">
         <!-- <span>Login</span> -->
         <img src="../../../assets/logo.png">
       </div>
       <div class="input_box">
-        <input type="text" id="user" class="input-field" required>
+        <input type="tel" id="user" class="input-field" required [(ngModel)]="mobileNumber" pattern="[0-9]*"
+          inputmode="numeric" maxlength="10" (keypress)="allowOnlyNumbers($event)">
         <label for="user" class="label"><i class="fa fa-phone-square pr-2" aria-hidden="true"></i>Mobile Number
         </label>
       </div>
       <div class="input_box">
-        <input type="password" id="pass" class="input-field" required oninput="checkPasswordStrength(this.value)">
+        <input type="tel" id="pass" class="input-field" required [(ngModel)]="otp" maxlength="6" pattern="[0-9]*"
+          inputmode="numeric" (keypress)="allowOnlyNumbers($event)">
         <label for="pass" class="label"><i class="fa fa-lock pr-2" aria-hidden="true"></i>Verify OTP</label>
         <i class="bx bx-lock-alt icon" id="togglePassword"></i>
       </div>
@@ -24,11 +26,13 @@
       <div class="input_box">
         <input type="submit" class="input-submit" value="Login" (click)="handleLogin()">
       </div>
-      
+      <div *ngIf="errorMessage" class="error-message text-white text-center mt-2">
+        {{ errorMessage }}
+      </div>
     </div>
 
   </div>
-  
+
 
 
 
