--- a/src/app/components/checkout/checkout.page.html
+++ b/src/app/components/checkout/checkout.page.html
@@ -10,10 +10,13 @@
 
     <!-- Cart Button with Badge -->
     <ion-buttons slot="end">
-      <span class="fa-stack fa-2x has-badge" data-count="5">
-  <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
-  <i style="" class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
-</span>
+      <div class="header-social-links">
+        <div class="cart-icon" onclick="toggleCart()">
+          <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
+          <span class="cart-count">0</span>
+        </div>
+       
+      </div>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -89,12 +92,10 @@
 						
 <section class="Event-Menu-List-section">
   <div class="Event-Menu-List">
-              <div class="Event-Menu-List-img">
-                <img
-                  src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
-                  alt="thumb">
+              <div class="">
+                <img src="https://cbeditz.com/public/cbeditz/preview/wedding-marriage-couple-image-background-free-si9jz.jpg" alt="thumb">
 
-                
+
 
               </div>
 
