--- a/src/app/components/checkout/checkout.page.scss
+++ b/src/app/components/checkout/checkout.page.scss
@@ -1,6 +1,6 @@
 .check-out{
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     height: 100vh;
 }
