--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -57,12 +57,13 @@
         </div>
 
         <div class="hamburger-menu-container">
-          <div class="log-sign mobile" style="--i: 1.8s">
-            <span class="fa-stack fa-2x has-badge" data-count="5">
-              <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
-              <i style="" class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
-            </span>
-          </div>
+          <div class="header-social-links">
+        <div class="cart-icon" onclick="toggleCart()">
+          <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
+          <span class="cart-count">0</span>
+        </div>
+       
+      </div>
           <div class="hamburger-menu">
             <div></div>
           </div>
