--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -36,6 +36,9 @@
               <li class="nav-link" style="--i: .6s">
                 <a>Chef</a>
               </li>
+               <li class="nav-link" style="--i: .6s" (click)="chefforders()">
+                <a>Cheff orders</a>
+              </li>
               <li class="nav-link" style="--i: .6s">
                 <a>Services</a>
               </li>
@@ -267,7 +270,7 @@
                   <div class="row">
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/10.png" alt="">
@@ -287,7 +290,7 @@
 
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/1.png" alt="">
@@ -307,7 +310,7 @@
 
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/5.png" alt="">
@@ -326,7 +329,7 @@
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/2.png" alt="">
@@ -345,7 +348,7 @@
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/3.png" alt="">
@@ -364,7 +367,7 @@
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/4.png" alt="">
@@ -383,7 +386,7 @@
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/7.png" alt="">
@@ -403,7 +406,7 @@
 
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/8.png" alt="">
@@ -423,7 +426,7 @@
 
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/9.png" alt="">
@@ -442,7 +445,7 @@
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
-                        <div class="card-inner" (click)="gotoevent()">
+                        <div class="card-inner" (click)="gotoservice()">
                           <div class="image-area">
                             <a>
                               <img src="../../../assets/Services/6.png" alt="">
