--- a/src/app/components/chefforders/chefforders.page.html
+++ b/src/app/components/chefforders/chefforders.page.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<ion-content [fullscreen]="true" >
+<ion-content [fullscreen]="true">
   <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
@@ -14,14 +14,14 @@
       <div class="header-box">
         <input type="checkbox" name="check" id="check">
         <div class="logo-container">
-          <img src="../../../assets/home-logo.png" style="width: 145px;">
+          <img src="../../../assets/cheff-veg-logo.png" style="width: 145px;">
         </div>
 
         <div class="nav-btn">
           <div class="nav-links">
             <ul>
               <li class="nav-link" style="--i: .6s">
-                <a>Home</a>
+                <a>cheff-veg</a>
               </li>
               <li class="nav-link" style="--i: .6s">
                 <a>About Us</a>
@@ -35,7 +35,7 @@
               <li class="nav-link" style="--i: .6s">
                 <a>menu</a>
               </li>
-              <li class="nav-link" style="--i: .6s" >
+              <li class="nav-link" style="--i: .6s">
                 <a>Logout</a>
               </li>
             </ul>
@@ -51,12 +51,12 @@
 
         <div class="hamburger-menu-container">
           <div class="header-social-links">
-        <div class="cart-icon" onclick="toggleCart()">
-          <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
-          <span class="cart-count">0</span>
-        </div>
-       
-      </div>
+            <div class="cart-icon" onclick="toggleCart()">
+              <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
+              <span class="cart-count">0</span>
+            </div>
+
+          </div>
           <div class="hamburger-menu">
             <div></div>
           </div>
@@ -64,5 +64,253 @@
       </div>
     </header>
 
-    </section>
+
+    <div class="products bg_color-dark-1">
+      <!-- Event Card Start -->
+      <div class="container px-4">
+        <div class="row">
+          <div class="col-md-12">
+
+            <div class="cheff-order-card">
+              <div class="cheff-order-card-wrapper">
+
+                <div class="cheff-order-card-content">
+                  <div class="cheff-order-card-title-wrapper">
+                    <span class="cheff-order-card-title">Marriage Event</span>
+
+                  </div>
+                  <ul class="Event-View-Card__list">
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Date : 24/09/25</span>
+                    </li>
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Time : 07:45 PM</span>
+                    </li>
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Total Members : 200</span>
+                    </li>
+
+
+                  </ul>
+                  <button class="button">
+                    View More
+                    <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+                      <path fill-rule="evenodd"
+                        d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+                        clip-rule="evenodd"></path>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- Event Card Details Start -->
+      <div class="container menu-data px-4">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="cheff-order-card">
+              <div class="cheff-order-card-wrapper">
+
+                <div class="cheff-order-card-content">
+                  <div class="cheff-order-card-title-wrapper">
+                    <span class="cheff-order-card-title">Marriage Event</span>
+
+                  </div>
+                  <ul class="Event-View-Card__list">
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Date : 24/09/25</span>
+                    </li>
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Time : 07:45 PM</span>
+                    </li>
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Total Members : 200</span>
+                    </li>
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Contact : 9876543210</span>
+                    </li>
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Address : Western Dallas center 5th Floor, Survey No: 83/1 Raidurg
+                        Village, Serillingmpally Mandal, Ranga Reddy District Hyderabad,500084</span>
+                    </li>
+
+                  </ul>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mt-4">
+            <!-- Nav tabs -->
+            <div class="">
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#cheff-veg" aria-controls="cheff-veg" role="tab"
+                    data-toggle="tab"><i class="fa-solid fa-helmet-safety pr-2"></i> Veg </a></li>
+                <li role="presentation"><a href="#cheff-non-veg" aria-controls="cheff-non-veg" role="tab"
+                    data-toggle="tab"><i class="fa-solid fa-utensils pr-2"></i> Non-Veg </a></li>
+
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content p-0">
+                <div role="tabpanel" class="tab-pane active" id="cheff-veg">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="d-flex key-feature">
+                        <div class="icon text-center rounded-pill me-3"><img
+                            src="https://cdn-icons-png.flaticon.com/512/541/541705.png" alt="" class="align-middle"
+                            style="height: 32px; width: 32px;"></div>
+                        <div class="flex-1">
+                          <h6 class="mb-0">Rice</h6>
+                        </div>
+                        <div class="flex-1">
+                          <h6 class="mb-0">50kg</h6>
+                        </div>
+                        <div _ngcontent-ng-c185948856="">
+                          <h6 class="mb-0 price">$55.00</h6>
+                        </div>
+                      </div>
+                      <div class="d-flex key-feature">
+                        <div class="icon text-center rounded-pill me-3"><img
+                            src="https://icons.veryicon.com/png/o/commerce-shopping/taofen-bar-category-icon-library/fresh-vegetables.png"
+                            alt="" class="align-middle" style="height: 32px; width: 32px;"></div>
+                        <div class="flex-1">
+                          <h6 class="mb-0">vegtables</h6>
+                        </div>
+                        <div class="flex-1">
+                          <h6 class="mb-0">50kg</h6>
+                        </div>
+                        <div _ngcontent-ng-c185948856="">
+                          <h6 class="mb-0 price">$55.00</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+                <div role="tabpanel" class="tab-pane" id="cheff-non-veg">
+                  <div class="d-flex key-feature">
+                    <div class="icon text-center rounded-pill me-3"><img
+                        src="https://cdn-icons-png.flaticon.com/256/4050/4050257.png" alt="" class="align-middle"
+                        style="height: 32px; width: 32px;"></div>
+                    <div class="flex-1">
+                      <h6 class="mb-0">Mutton</h6>
+                    </div>
+                    <div class="flex-1">
+                      <h6 class="mb-0">50kg</h6>
+                    </div>
+                    <div>
+                      <h6 class="mb-0 price">$55.00</h6>
+                    </div>
+                  </div>
+                  <div class="d-flex key-feature">
+                    <div class="icon text-center rounded-pill me-3"><img
+                        src="https://cdn3.iconfinder.com/data/icons/marine-life/100/04-512.png" alt=""
+                        class="align-middle" style="height: 32px; width: 32px;"></div>
+                    <div class="flex-1">
+                      <h6 class="mb-0">prawns</h6>
+                    </div>
+                    <div class="flex-1">
+                      <h6 class="mb-0">50kg</h6>
+                    </div>
+                    <div _ngcontent-ng-c185948856="">
+                      <h6 class="mb-0 price">$55.00</h6>
+                    </div>
+                  </div>
+                  <div class="d-flex key-feature">
+                    <div class="icon text-center rounded-pill me-3"><img
+                        src="https://cdn-icons-png.flaticon.com/512/2002/2002611.png" alt="" class="align-middle"
+                        style="height: 32px; width: 32px;"></div>
+                    <div class="flex-1">
+                      <h6 class="mb-0">Chicken</h6>
+                    </div>
+                    <div class="flex-1">
+                      <h6 class="mb-0">50kg</h6>
+                    </div>
+                    <div _ngcontent-ng-c185948856="">
+                      <h6 class="mb-0 price">$55.00</h6>
+                    </div>
+                  </div>
+
+
+
+                </div>
+                <div class="col-md-12">
+                  <div _ngcontent-ng-c2015092970="" class="buttonContainer"><button _ngcontent-ng-c2015092970="" class="Accept">Accept</button><button _ngcontent-ng-c2015092970="" class="Decline">Decline</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 </ion-content>
