--- a/src/app/components/chefforders/chefforders.page.html
+++ b/src/app/components/chefforders/chefforders.page.html
@@ -133,7 +133,7 @@
       </div>
 
       <!-- Event Card Details Start -->
-      <div class="container menu-data px-4">
+      <div class="container menu-data px-4"  style="display: none;">
         <div class="row">
           <div class="col-md-12">
             <div class="cheff-order-card">
