--- a/src/app/components/chefforders/chefforders.page.html
+++ b/src/app/components/chefforders/chefforders.page.html
@@ -70,7 +70,6 @@
       <div class="container px-4">
         <div class="row">
           <div class="col-md-12">
-
             <div class="cheff-order-card">
               <div class="cheff-order-card-wrapper">
 
@@ -112,6 +111,65 @@
                         </svg>
                       </span>
                       <span class="list_text">Total Members : 200</span>
+                    </li>
+
+
+                  </ul>
+                  <button class="button">
+                    View More
+                    <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+                      <path fill-rule="evenodd"
+                        d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+                        clip-rule="evenodd"></path>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-md-12">
+            <div class="cheff-order-card">
+              <div class="cheff-order-card-wrapper">
+
+                <div class="cheff-order-card-content">
+                  <div class="cheff-order-card-title-wrapper">
+                    <span class="cheff-order-card-title">Birthday Event</span>
+
+                  </div>
+                  <ul class="Event-View-Card__list">
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Date : 14/11/25</span>
+                    </li>
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Time : 10:45 PM</span>
+                    </li>
+                    <li class="Event-View-Card__list_item">
+                      <span class="check">
+                        <svg class="check_svg" fill="currentColor" viewBox="0 0 16 16"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path clip-rule="evenodd"
+                            d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z"
+                            fill-rule="evenodd"></path>
+                        </svg>
+                      </span>
+                      <span class="list_text">Total Members : 500</span>
                     </li>
 
 
