--- a/src/app/components/event-details/event-details.page.html
+++ b/src/app/components/event-details/event-details.page.html
@@ -169,7 +169,7 @@
 
               </div>
 
-              <div class="page-wrapper p-4">
+              <div class="page-wrapper p-4"  style="display: none;">
                 <h2 class="heading">Service Checkout</h2>
                 <hr class="heading_space">
                 <div class="accordion-group">
