--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -34,16 +34,17 @@
                 <a>About Us</a>
               </li>
               <li class="nav-link" style="--i: .6s">
-                <a>Chef</a>
+                <a>Profile</a>
               </li>
-               <li class="nav-link" style="--i: .6s" (click)="chefforders()">
-                <a>Cheff orders</a>
+              
+              <li class="nav-link" style="--i: .6s">
+                <a>Events</a>
               </li>
               <li class="nav-link" style="--i: .6s">
                 <a>Services</a>
               </li>
-              <li class="nav-link" style="--i: .6s">
-                <a>menu</a>
+               <li class="nav-link" style="--i: .6s" (click)="orders()">
+                <a>orders</a>
               </li>
               <li class="nav-link" style="--i: .6s" (click)="logout()">
                 <a>Logout</a>
