--- a/src/app/components/chefforders/chefforders.page.html
+++ b/src/app/components/chefforders/chefforders.page.html
@@ -14,13 +14,13 @@
       <div class="header-box">
         <input type="checkbox" name="check" id="check">
         <div class="logo-container">
-          <img src="../../../assets/cheff-veg-logo.png" style="width: 145px;">
+          <img src="../../../assets/home-logo.png" style="width: 145px;">
         </div>
 
         <div class="nav-btn">
           <div class="nav-links">
             <ul>
-              <li class="nav-link" style="--i: .6s">
+              <!-- <li class="nav-link" style="--i: .6s">
                 <a>cheff-veg</a>
               </li>
               <li class="nav-link" style="--i: .6s">
@@ -34,8 +34,8 @@
               </li>
               <li class="nav-link" style="--i: .6s">
                 <a>menu</a>
-              </li>
-              <li class="nav-link" style="--i: .6s">
+              </li> -->
+              <li class="nav-link" style="--i: .6s" (click)="logout()">
                 <a>Logout</a>
               </li>
             </ul>
@@ -51,10 +51,10 @@
 
         <div class="hamburger-menu-container">
           <div class="header-social-links">
-            <div class="cart-icon" onclick="toggleCart()">
+            <!-- <div class="cart-icon" onclick="toggleCart()">
               <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
               <span class="cart-count">0</span>
-            </div>
+            </div> -->
 
           </div>
           <div class="hamburger-menu">
@@ -67,7 +67,7 @@
 
     <div class="products bg_color-dark-1">
       <!-- Event Card Start -->
-      <div class="container px-4">
+      <div class="container px-4" *ngIf="!isDetailsPage">
         <div class="row">
           <div class="col-md-12">
             <div class="cheff-order-card">
@@ -115,7 +115,7 @@
 
 
                   </ul>
-                  <button class="button">
+                  <button class="button" (click)="view()">
                     View More
                     <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
                       <path fill-rule="evenodd"
@@ -174,7 +174,7 @@
 
 
                   </ul>
-                  <button class="button">
+                  <button class="button" (click)="view()">
                     View More
                     <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
                       <path fill-rule="evenodd"
@@ -191,7 +191,7 @@
       </div>
 
       <!-- Event Card Details Start -->
-      <div class="container menu-data px-4"  style="display: none;">
+      <div class="container menu-data px-4" *ngIf="isDetailsPage">
         <div class="row">
           <div class="col-md-12">
             <div class="cheff-order-card">
@@ -361,7 +361,8 @@
 
                 </div>
                 <div class="col-md-12">
-                  <div _ngcontent-ng-c2015092970="" class="buttonContainer"><button _ngcontent-ng-c2015092970="" class="Accept">Accept</button><button _ngcontent-ng-c2015092970="" class="Decline">Decline</button></div>
+                  <div _ngcontent-ng-c2015092970="" class="buttonContainer"><button _ngcontent-ng-c2015092970="" class="Accept" (click)="isDetailsPage = false">Accept</button>
+                    <button _ngcontent-ng-c2015092970="" class="Decline" (click)="isDetailsPage = false">Decline</button></div>
                 </div>
               </div>
             </div>
